# lab3-WaldemarKarasev

./: CMakeLists.txt
common/: CMakeLists.txt  utils.hpp
common/thread_pool/: queue.hpp  submit.hpp  task.hpp  thread_pool.cpp  thread_pool.hpp
src/mapper/: main.cpp
src/reducer/: main.cpp
